[build-system]
requires = ["maturin>=1.10.2,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "rustkit_learning._backend"
manifest-path = "_backend/Cargo.toml"

[project]
name = "rustkit_learning"
version = "0.1.0"
description = "A modern rust implemented and type aware replacement for scikit-learning"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bokeh>=3.8.1",
    "numpy>=2.3.5",
    "ruff>=0.14.7",
]

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { file = "_backend/Cargo.toml" },
  { file = "_backend/**.rs" }
]
